# labicompare

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yaml  docs.yaml
api/data/: index.html
api/plots/: index.html
api/stats/: index.html
docs/: index.md  next.md  usage.md
docs/api/: data.md  plots.md  stats.md
docs/tutorials/: 01_loading_data.ipynb  02_applying_friedman.ipynb  03_running_wilcoxon_holm.ipynb  06_visualizing_1vs1.ipynb  07_pairwise_pvalue_matrix.ipynb  08_plot_cd_diagram.ipynb  results.csv
labicompare/: dummy.py
labicompare/core/: data.py  results.py
labicompare/plots/: differences.py  heatmap.py  ranking.py  scatter.py
labicompare/stats/: __init__.py  _bonferroni.py  _corrections.py  _nemenyi.py  _posthoc.py  _wilcoxon.py  friedman.py  pairwise.py  posthoc.py  utils.py  wilcoxon.py
labicompare/tables/: comparison_table.py  one_vs_one_table.py
labicompare/visualization/: __init__.py  _critical_difference_diagram.py  _mcm.py  _one_vs_one.py  one_vs_one.py  utils.py
next/: index.html
notebooks/: 01_calculating_average_ranks.ipynb  02_plot_nemenyi_critical_difference_diagram.ipynb  03_plot_bonferroni_critical_difference_diagram.ipynb  04_individual_pairwise_tests.ipynb  04_plot_wilcoxon_holm_critical_difference_diagram.ipynb  05_one_vs_one_plot.ipynb  05_using_difference_diagrams.ipynb  06_generate_a_multi-comparison_matrix.ipynb  example_metrics.csv  friedmann.ipynb  one_vs_one_plot.ipynb
scripts/: example_differences.py  example_heatmap.py  example_paired_test.py  example_ranking.py  example_scatter.py
search/: search_index.json
tests/: test_dummy.py
tests/core/: test_data.py
tests/stats/: test_friedman.py  test_posthoc.py  test_wilcoxon.py
tutorials/01_loading_data/: index.html
tutorials/02_applying_friedman/: index.html
tutorials/03_running_wilcoxon_holm/: index.html
tutorials/04_individual_pairwise_tests/: index.html
tutorials/05_using_difference_diagrams/: index.html
tutorials/06_visualizing_1vs1/: index.html
tutorials/07_pairwise_pvalue_matrix/: index.html
usage/: index.html
(+1 files in other folders)
