[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "labicompare"
authors = [
    {name = "Gilberto Barbosa", email = "gilberto.barbosa@usp.br"},
]
description = "A small lib for model comparison"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    'importlib-metadata; python_version<"3.10"',
]
dynamic = ["version"]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default