[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "labicompare"
version = "0.2.0"
description = "A statistical comparison library for machine learning models."
authors = ["Gilberto Medeiros <gilberto.barbosa@usp.br>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "labicompare", from="src"}
]

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "*"
scipy = "*"
pandas = "*"
matplotlib = "*"
seaborn = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
ruff = "*"
pre-commit = "*"
